Fixed header margin and project nav icon spacing issues.

--- a/client/app/styles/components/menu.less
+++ b/client/app/styles/components/menu.less
@@ -13,7 +13,7 @@
 .header-fixed{
     top: 0;
     left: 0;
-    padding: 5px 0 9px;
+    padding: 12px 0;
     position: fixed;
     background: @darkest-grey !important;
     background-color: @darkest-grey !important;
@@ -21,7 +21,7 @@
     
     a.brand{
         display: block;
-        margin-top: 27px;
+        margin-top: 10px;
     }
     
 }
